src/objects/Apttus_Approval__Backup_Approver__c.object
<CustomObject>
    <description>Allows approvers and administrators to specify backup approvers.  There is an option to transfer all pending request from and to the approver and the backup approver upon activation or cancellation of backups.  The approvals engine automatically routes requests to backup approvers when this is in effect.</description>
    <fields>
        <fullName>APTS_Cancellation_Date__c</fullName>
        <description>This field is created because Cancellation date needs to be read only on list view but we cannot remove edit access from this field it comes as editable. we will put this field on listview.</description>
        <formula>Apttus_Approval__Cancellation_Date__c</formula>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Backup_Action__c</fullName>
        <description>Backup action</description>
        <formula>IF(NOT(Apttus_Approval__InEffect__c), HYPERLINK(&quot;/apex/Apttus_Approval__BackupApproverAction?approverId=&quot; &amp;Apttus_Approval__Current_User__c &amp; &quot;&amp;backupApproverAction=activate&quot;, IMAGE(&quot;/resource/Apttus_Approval__Button_Activate&quot;, &quot;Activate Backup&quot;), &quot;_self&quot;), IF(AND(Apttus_Approval__InEffect__c,Apttus_Approval__IsActive__c), HYPERLINK(&quot;/apex/Apttus_Approval__BackupApproverAction?approverId=&quot; &amp;Apttus_Approval__Current_User__c &amp; &quot;&amp;backupApproverAction=deactivate&quot;, IMAGE(&quot;/resource/Apttus_Approval__Button_Deactivate&quot;, &quot;Deactivate Backup&quot;), &quot;_self&quot;), &quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Action to activate or deactivate the backup</inlineHelpText>
        <label>Backup Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Current_User_Country__c</fullName>
        <formula>Apttus_Approval__Current_User__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Owner_Country__c</fullName>
        <formula>Owner:User.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Country</label>
        <type>Text</type>
    </fields>    
    <fields>
        <fullName>Apttus_Approval__Backup_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup/Delegate User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028l1cEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Cancellation_Date__c</fullName>
        <inlineHelpText>Read only system field. Provides a date stamp when delegate record is manually deactivated by the user.</inlineHelpText>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Current_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000028l1fEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Effective_Date__c</fullName>
        <description>Backup effective date</description>
        <inlineHelpText>Please enter an effective date only if you are not activating it immediately. Otherwise use the Activate button on the next screen to Activate Backup immediately.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Expiration_Date__c</fullName>
        <description>Backup expiration date</description>
        <inlineHelpText>Please enter an expiration date only if you need the system to expire it automatically at a future date. Otherwise use the Deactivate button on the next screen to cancel the backup immediately</inlineHelpText>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__InEffect__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Read only system field. It gets checked when record is manually activated for the duration period between effective date and expiration date.</inlineHelpText>
        <label>In Effect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is Active is a system field. Whether displayed as checked or unchecked, the delegate record will be activated only when user manually clicks on &apos;Activate&apos; button on the next page after save</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__IsDelegate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the this entry is for delegate user.</description>
        <inlineHelpText>Check the box to define delegate. If unchecked backup approver is defined. The delegate and approver both will receive the approval notifications. For backup only backup receives the approval notification.</inlineHelpText>
        <label>Is Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SuppressDelegateNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to enable/disable notification to Delegate Approver</description>
        <inlineHelpText>Indicator to enable/disable notification to Delegate Approver</inlineHelpText>
        <label>Suppress Delegate Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Transfer_in_flight__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Transfer in-flight</label>
        <type>Checkbox</type>
    </fields>
    <label>Backup/Delegate Approver</label>
    <listViews>
        <fullName>APTS_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Backup_User__c</columns>
        <columns>Apttus_Approval__Backup_Action__c</columns>
        <columns>Apttus_Approval__Cancellation_Date__c</columns>
        <columns>Apttus_Approval__Comment__c</columns>
        <columns>Apttus_Approval__Current_User__c</columns>
        <columns>Apttus_Approval__Effective_Date__c</columns>
        <columns>Apttus_Approval__Expiration_Date__c</columns>
        <columns>Apttus_Approval__InEffect__c</columns>
        <columns>Apttus_Approval__IsDelegate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus_Approval__IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Backup_User__c</columns>
        <columns>Apttus_Approval__Backup_Action__c</columns>
        <columns>Apttus_Approval__Transfer_in_flight__c</columns>
        <columns>Apttus_Approval__Current_User__c</columns>
        <columns>Apttus_Approval__Effective_Date__c</columns>
        <columns>Apttus_Approval__Expiration_Date__c</columns>
        <columns>APTS_Cancellation_Date__c</columns>
        <columns>Apttus_Approval__InEffect__c</columns>
        <columns>Apttus_Approval__IsDelegate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BU-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backup/Delegate Approvers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>